--- a/CVPRTest/CVPRTest/Views/TranslationsPage.xaml
+++ b/CVPRTest/CVPRTest/Views/TranslationsPage.xaml
@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="CVPRTest.Views.TranslationsPage">
+             x:Class="CVPRTest.Views.TranslationsPage" Title="Translations">
   <ContentPage.Content>
     <StackLayout HorizontalOptions="FillAndExpand" VerticalOptions="FillAndExpand">
       <StackLayout Orientation="Horizontal" HorizontalOptions="Center" VerticalOptions="Start">
@@ -11,14 +11,14 @@
                 Command="{Binding StopCommand}"/>
         <Entry x:Name="UrlEntry" Text="test_url"/>
       </StackLayout>
-      <ListView x:Name="translationList" ItemsSource="{Binding Translations}" HasUnevenRows="True">
+      <ListView x:Name="translationList" ItemsSource="{Binding Translations}" SelectedItem="{Binding SelectedTranslation, Mode=TwoWay}" HasUnevenRows="True">
         <ListView.ItemTemplate>
           <DataTemplate>
             <ViewCell>
               <ViewCell.View>
                 <StackLayout>
                   <Label Text="{Binding Name}" FontSize="Large" />
-                  <Label Text="{Binding Url}" FontSize="Small" />
+                  <Label x:Name="TranslationUrl" Text="{Binding Url}" FontSize="Small" />
                 </StackLayout>
               </ViewCell.View>
             </ViewCell>
